added posting router

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
+  h1= "Food Buzz"
   p Welcome to #{title}
+
+
+  // create: a(href = '/posting/')
+  a(href = '/posting') Post a Review!
+
+
