--- a/views/index.jade
+++ b/views/index.jade
@@ -1,21 +1,78 @@
-extends layout
-
-block content
-  h1= "Food Buzz"
-  p Welcome to #{title}
-
-
-  if isUser
-    a(href = '/posting') Post a Review!
-      br
-      br
-    a(href ='/logout') Logout
-
-  else
-    a(href='/register') Register
-    br
-    br
-
-    a(href='/login') Login
-
-
+html
+  head
+    title Food Feed
+    link(href='http://fonts.googleapis.com/css?family=Oswald', rel='stylesheet', type='text/css')
+    link(rel='stylesheet', type='text/css', href='../public/css/style.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
+  body
+    .wrapper
+      .container
+        h1(style='font: 5em verdana, helvetica, sans-serif; display: inline-block; padding-right: 0.25em') FoodFeed
+        div(style='position: relative; top: -1.3em; display: inline-block;')
+          button.btn.btn-primary(type='button', style='font-size: 24px;') Login via Facebook
+        div(style='position: relative; top: -0.5em; left: 22em; display: inline-block;')
+          form.top_search(action='/search/query', method='GET')
+            div(style='display: inline-block;')
+              input.form-control.input-lg(style='display: inline-block', type='text', placeholder='Search', name='terms')
+            button.btn.btn-default(style='font-size: 32px; position: relative; top: -0.1em', type='submit')
+              span.glyphicon.glyphicon-search
+        div(style='padding-top: 4em')
+          h2(style='display: inline-block;') Foodster's Choice 
+          img(style='display: inline-block; padding-bottom: 1.5em', src='../public/images/trophy-with-a-star-bigger.svg')
+        #three-columns.grid-container(style='display: block;')
+          ul.rig.columns-3
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Foodster's Choice
+                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+              span.rating-static.rating-30
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Foodster's Choice
+                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+              span.rating-static.rating-20
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Foodster's Choice
+                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+              span.rating-static.rating-40
+          button.btn.btn-success(type='button', style='font-size: 22px;') See more...
+          .span9(style='height: 4em')
+          h2(style='display: inline-block;') Restaurant Posts 
+          div(style='width: 3em; height: 3em; display: inline-block;')
+            img(style='padding-bottom: 2em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+          ul.rig.columns-3
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Lorem Ipsum
+                div(style='width: 3em; height: 3em; display: inline-block;')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+              span.rating-static.rating-15
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Lorem Ipsum
+                div(style='width: 3em; height: 3em; display: inline-block;')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+              span.rating-static.rating-25
+            li
+              img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
+              h3 Soylent
+              span
+                h4(style='display: inline-block;') Lorem Ipsum
+                div(style='width: 3em; height: 3em; display: inline-block;')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+              span.rating-static.rating-40
+          button.btn.btn-success(type='button', style='font-size: 22px;') See more...
+      // /.container
+    // /.wrapper
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js', type='text/javascript')
