edited the relative paths in index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ html
   head
     title Food Feed
     link(href='http://fonts.googleapis.com/css?family=Oswald', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', type='text/css', href='../public/css/style.css')
+    link(rel='stylesheet', type='text/css', href='../css/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
   body
     .wrapper
@@ -18,7 +18,7 @@ html
               span.glyphicon.glyphicon-search
         div(style='padding-top: 4em')
           h2(style='display: inline-block;') Foodster's Choice 
-          img(style='display: inline-block; padding-bottom: 1.5em', src='../public/images/trophy-with-a-star-bigger.svg')
+          img(style='display: inline-block; padding-bottom: 1.5em', src='../images/trophy-with-a-star-bigger.svg')
         #three-columns.grid-container(style='display: block;')
           ul.rig.columns-3
             li
@@ -26,27 +26,27 @@ html
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
               span.rating-static.rating-30
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
               span.rating-static.rating-20
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../public/images/trophy-with-a-star.svg')
+                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
               span.rating-static.rating-40
           button.btn.btn-success(type='button', style='font-size: 22px;') See more...
           .span9(style='height: 4em')
           h2(style='display: inline-block;') Restaurant Posts 
           div(style='width: 3em; height: 3em; display: inline-block;')
-            img(style='padding-bottom: 2em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+            img(style='padding-bottom: 2em; padding-left: 0.5em', src='../images/restaurant-signal.svg')
           ul.rig.columns-3
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
@@ -54,7 +54,7 @@ html
               span
                 h4(style='display: inline-block;') Lorem Ipsum
                 div(style='width: 3em; height: 3em; display: inline-block;')
-                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../images/restaurant-signal.svg')
               span.rating-static.rating-15
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
@@ -62,7 +62,7 @@ html
               span
                 h4(style='display: inline-block;') Lorem Ipsum
                 div(style='width: 3em; height: 3em; display: inline-block;')
-                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../images/restaurant-signal.svg')
               span.rating-static.rating-25
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
@@ -70,7 +70,7 @@ html
               span
                 h4(style='display: inline-block;') Lorem Ipsum
                 div(style='width: 3em; height: 3em; display: inline-block;')
-                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../public/images/restaurant-signal.svg')
+                  img(style='padding-bottom: 0.75em; padding-left: 0.5em', src='../images/restaurant-signal.svg')
               span.rating-static.rating-40
           button.btn.btn-success(type='button', style='font-size: 22px;') See more...
       // /.container
