--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 html
   head
-    title Food Feed
+    title #title
     link(href='http://fonts.googleapis.com/css?family=Oswald', rel='stylesheet', type='text/css')
     link(rel='stylesheet', type='text/css', href='../css/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
@@ -9,7 +9,7 @@ html
       .container
         h1(style='font: 5em verdana, helvetica, sans-serif; display: inline-block; padding-right: 0.25em') FoodFeed
         div(style='position: relative; top: -1.3em; display: inline-block;')
-          button.btn.btn-primary(type='button', style='font-size: 24px;') Login via Facebook
+          button.btn.btn-primary(type='button', style='font-size: 24px;', onclick='location.href="/register"') Register
         div(style='position: relative; top: -0.5em; left: 22em; display: inline-block;')
           form.top_search(action='/search/query', method='GET')
             div(style='display: inline-block;')
@@ -26,21 +26,24 @@ html
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
+                div(style='width: 2em; height: 2em; display: inline-block;')
+                  img(style='display: inline-block;', src='../images/trophy-with-a-star-bigger.svg')
               span.rating-static.rating-30
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
+                div(style='width: 2em; height: 2em; display: inline-block;')
+                  img(style='display: inline-block;', src='../images/trophy-with-a-star-bigger.svg')
               span.rating-static.rating-20
             li
               img(src='http://www.meghantelpner.com/wp-content/uploads/2014/01/soylent.png')
               h3 Soylent
               span
                 h4(style='display: inline-block;') Foodster's Choice
-                img(style='display: inline-block;', src='../images/trophy-with-a-star.svg')
+                div(style='width: 2em; height: 2em; display: inline-block;')
+                  img(style='display: inline-block; top: -1em', src='../images/trophy-with-a-star-bigger.svg')
               span.rating-static.rating-40
           button.btn.btn-success(type='button', style='font-size: 22px;') See more...
           .span9(style='height: 4em')
