--- a/views/registerSelect.jade
+++ b/views/registerSelect.jade
@@ -11,11 +11,11 @@ html
           | Register As...
       .row(style='padding-top: 2em')
         .col-sm-6
-          a(href='/register-restaurant')
+          a(href='register-restaurant')
             img(style='width: 50%; height: 50%; display: block; margin: auto;', src='../images/restaurant-signal.svg')
           h2(style='text-align: center; padding-top: 0.20em') Restaurant
         .col-sm-6
-          a(href='/register-foodster')
+          a(href='register-foodster')
             img(style='width: 50%; height: 50%; display: block; margin: auto;', src='../images/trophy-with-a-star.svg')
           h2(style='text-align: center;') Foodster
       div(style='width: 3em; height: 3em; display: inline-block;')
