--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,8 @@ html
         h1(style='font: 5em verdana, helvetica, sans-serif; display: inline-block; padding-right: 0.25em') FoodFeed
         div(style='position: relative; top: -1.3em; display: inline-block;')
           button.btn.btn-primary(type='button', style='font-size: 24px;', onclick='location.href="/register"') Register
+        div(style='position: relative; top: -1.3em; left: 0.25em; display: inline-block;')
+          button.btn.btn-primary(type='button', style='font-size: 24px;', onclick='location.href="/login"') Login
         div(style='position: relative; top: -0.5em; left: 22em; display: inline-block;')
           form.top_search(action='/search/query', method='GET')
             div(style='display: inline-block;')
