login re-directs to home/username

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,8 @@
 extends layout
 block content
-    h1 Welcome to #{title}
+
+    h1 Your Feed!
     p Your personal feed foodie cravings
 
-    a(href= '/posting') Post a review of a restaurant!
 
 
