--- a/views/login.jade
+++ b/views/login.jade
@@ -17,7 +17,7 @@ block content
     form(name='login', action='/login', method='post')
         input(type='text', placeholder='Username', name='username')
         br
-        input(type='text', placeholder='Password', name='password')
+        input(type='password', placeholder='Password', name='password')
         br
         input(type='submit', value='Submit')
 
