--- a/views/register.jade
+++ b/views/register.jade
@@ -22,7 +22,7 @@ block content
             br
             input(type='password', placeholder='Password', name='password')
             br
-            p Upload a avatar for your profile
+            p Upload an avatar for your profile
             br
             input(type='file', name='avatar')
             br
