--- a/views/home.jade
+++ b/views/home.jade
@@ -2,9 +2,26 @@ extends layout
 block content
 
     h1 Your Feed!
-    p Your personal feed foodie cravings
+    p Your personal Food Feed
+
+
+    //table
+    //    tr
+    //        td Vancity
+    //    tr
+    //        img(src='pic_mountain.jpg', alt='Mountain View', style='width:304px;height:228px;')
+    //    tr
+    //        td good
+
+
+
+
 
 
     br
     br
     a(href="/posting") Post a Review!
+
+
+
+
