--- a/views/logins.jade
+++ b/views/logins.jade
@@ -13,7 +13,7 @@ html
         form.form-horizontal(name='login', action='/login', method='post')
           fieldset
             #legend
-              legend(style='text-align: center; font-size: 5em; color: white') Register
+              legend(style='text-align: center; font-size: 5em; color: white') Login
             .control-group
               label.control-label(for='username') Username
               .controls
